# Hybrid-LLM-Jailbreak-Detector

./: .gitattributes  .gitignore  .secrets.baseline  Dockerfile  Makefile  README.md  explain.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
data/processed/: test.parquet  train.parquet  val.parquet
data/raw/: checksums.json
hf_space/: app.py
models/: stage_a_manifest.json
models/manifests/: stage_a_manifest.json
reports/: results.json
scripts/: export_onnx_local.py  kaggle_train.ipynb
src/: config.py  exceptions.py  logger.py
src/api/: app.py  feedback.py  schemas.py
src/baseline/: infer_baseline.py  train_baseline.py
src/data/: collect.py  pipeline.py  schema.py  validate.py
src/evaluation/: evaluate.py  redteam.py
src/hybrid/: explain.py  normalize.py  pipeline.py  policy_gate.py  similarity.py  stage_a.py  stage_b.py
src/training/: __init__.py  calibrate.py  export_onnx.py  train.py
src/ui/: gradio_app.py  theme.py
tests/: test_api_contracts.py  test_baseline.py  test_collect.py  test_data_schema.py  test_docs.py  test_redteam.py  test_training.py
