[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "p1-hybrid-jailbreak-detector"
version = "0.1.0"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "mlflow.*",
    "faiss",
    "sentence_transformers.*",
    "captum.*",
    "transformers.*",
    "torch.*",
    "peft",
    "peft.*",
    "weave",
    "optimum",
    "optimum.*",
    "onnxruntime",
    "onnxruntime.*",
    "pandas",
    "pandas.*",
    "matplotlib",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning"]

[tool.coverage.run]
omit = [
    "src/training/*",
    "src/evaluation/*",
    "src/baseline/*",
    "src/ui/gradio_app.py",
    "src/api/stream.py",
]
