[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "p1-hybrid-jailbreak-detector"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "psutil>=5.9",
    "together>=1.3",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "mlflow.*",
    "faiss",
    "sentence_transformers.*",
    "captum.*",
    "transformers.*",
    "torch.*",
    "peft",
    "peft.*",
    "weave",
    "optimum",
    "optimum.*",
    "onnxruntime",
    "onnxruntime.*",
    "pandas",
    "pandas.*",
    "matplotlib",
    "matplotlib.*",
    "slowapi",
    "slowapi.*",
    "sse_starlette",
    "sse_starlette.*",
    "prometheus_fastapi_instrumentator",
    "prometheus_fastapi_instrumentator.*",
    "together",
    "together.*",
    "gradio",
    "gradio.*",
    "plotly",
    "plotly.*",
    "yaml",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::DeprecationWarning:gradio",
    "ignore::DeprecationWarning:httpx",
    "ignore::DeprecationWarning:anyio",
    "ignore::DeprecationWarning:starlette",
]

[tool.coverage.run]
omit = [
    "src/training/*",
    "src/evaluation/*",
    "src/baseline/*",
    "src/ui/gradio_app.py",
    "src/api/stream.py",
    "hf_space/*",
]
